# LabAgentSkill

./: .gitignore  README.md  insurBench.jsonl  main.py  pyproject.toml
notebooks/: test.ipynb  test_agent.ipynb  test_agent_claude_sdk.ipynb  test_agent_finer_300_data_pushing.ipynb  test_agent_finer_300_stadard-gpt.ipynb  test_agent_finer_300_stadard-qwen.ipynb  test_agent_finer_300_stadard.ipynb  test_agent_finer_300_stadard_gemma12 copy.ipynb  test_agent_finer_300_stadard_gemma12.ipynb  test_agent_imdb_300_basic.ipynb  test_agent_imdb_300_stadard-gpt.ipynb  test_agent_imdb_300_stadard.ipynb  test_agent_imdb_300_stadard_gemma12.ipynb  test_agent_insurbench_300_stadard-gpt-with-history.ipynb  test_agent_insurbench_300_stadard-gpt.ipynb  test_agent_skill_scaling_standard.ipynb  test_dataset_finer_139.ipynb  test_dataset_imdb.ipynb  test_langchain_agent.ipynb  test_langchain_agent_sql.ipynb  test_langchain_talk.ipynb  test_skills_langchain.ipynb
prompts/: p_default_system.jinja  p_exec_finer.jinja  p_exec_imdb.jinja  p_exec_insurBench.jinja  p_skill_discov.jinja  p_skill_exec.jinja  p_skill_select.jinja  system_prompt.jinja  system_prompt_exec_post_skill copy 2.jinja  system_prompt_exec_post_skill copy.jinja  system_prompt_template copy.jinja
scripts/: test_agent_claude_sdk.py  test_agent_finer_300_stadard-claude.py  test_agent_finer_300_stadard-gemma4.py  test_agent_finer_300_stadard-qwen.py  test_agent_imdb_300_stadard-gemma4.py  test_agent_imdb_300_stadard-qwen.py  visualize_agent_result.py
src/LabAgentSkill/: SkillAwareAgent.py  evaluate.py
(+11 files in other folders)
