[project]
name = "labagentskill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.11",
    "langchain>=1.2.8",
    "langchain-anthropic>=1.3.1",
    "langchain-openai>=1.1.7",
    "tavily-python>=0.7.21",
]
