[project]
name = "labagentskill"
version = "0.1.0"
description = "This is a reserach repo for agent skill"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "deepagents>=0.3.11",
    "langchain[openai,opensi]>=1.2.8",
    "langchain-anthropic>=1.3.1",
    "langchain-openai>=1.1.7",
    "tavily-python>=0.7.21",
    "vllm>=0.15.1",
    "strictyaml>=1.7.3",
]
